# scorpio-pro

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  example_scope.yaml  pyproject.toml  requirements.txt  setup.py
packaging/linux/: build_deb.sh
packaging/macos/: build_dmg.sh
packaging/windows/: build_msi.py
scorpio_pro/: __init__.py  __main__.py  cli.py
scorpio_pro/compliance/: __init__.py  engine.py  ferpa.py  gdpr.py  hipaa.py  nist_ai.py  nist_csf.py
scorpio_pro/config/: __init__.py  authorization.py  scope.py  settings.py
scorpio_pro/core/: __init__.py  engine.py  logger.py  plugin_manager.py
scorpio_pro/reporting/: __init__.py  report_generator.py
scorpio_pro/reporting/formatters/: __init__.py  html_formatter.py  json_formatter.py  txt_formatter.py
scorpio_pro/reporting/templates/: report.html.j2  report.txt.j2  styles.css
scorpio_pro/scanners/: __init__.py  app_scanner.py  base_scanner.py  cloud_scanner.py  network_scanner.py  remote_access_scanner.py  shared_drive_scanner.py  system_scanner.py  vuln_scanner.py
scorpio_pro/utils/: __init__.py  crypto.py  network.py  platform_utils.py
tests/: __init__.py  test_compliance.py  test_network_scanner.py  test_report_generator.py  test_system_scanner.py
